// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Paragraph > snapshot: custom test id 1`] = `
<p
  class="ucl-uikit-paragrah css-1q7fap"
  data-testid="custom-test-id"
>
  This is a test
</p>
`;

exports[`Paragraph > snapshot: emphasis 1`] = `
<p
  class="ucl-uikit-paragrah css-1q7fap"
  data-testid="ucl-uikit-paragrah"
>
  high emphasis
</p>
`;

exports[`Paragraph > snapshot: minimal props 1`] = `
<p
  class="ucl-uikit-paragrah css-1q7fap"
  data-testid="ucl-uikit-paragrah"
>
  This is a test
</p>
`;

exports[`Paragraph > snapshot: no margins 1`] = `
<p
  class="ucl-uikit-paragrah css-1trsbhh"
  data-testid="ucl-uikit-paragrah"
>
  no margins
</p>
`;

exports[`Paragraph > snapshot: size 1`] = `
<p
  class="ucl-uikit-paragrah css-u9mr1g"
  data-testid="ucl-uikit-paragrah"
>
  standfirst
</p>
`;
